fix up/down arrows not showing

--- a/PageRoot/www/scss/index.scss
+++ b/PageRoot/www/scss/index.scss
@@ -226,7 +226,8 @@ input[type='search'] {
 }
 
 #SideNavUpArrow, #SideNavDownArrow {
-    display: none;
+    display: block;
+    visibility: hidden;
 }
 
 .pageview-mode {
